--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body class="content">
   <!-- Mouse path design by Louis Hoebregts from https://css-tricks.com/simulating-mouse-movement/ -->
   <svg id="mouse" class="hide" fill="white" stroke="black"><path d="M20,21l4.5,8l-3.4,2l-4.6-8.1L12,29V9l16,12H20z"></path></svg>
-    <div class="title spacer-bottom">
+    <div class="title pad-bottom">
       <label>Let Me </label>
       <img src="resources/jira_logo.png"/>
       <label>Jira That For You</label>
