--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en-US">
   <head>
   <title>Let Me Jira That For You</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/styles.css">
   <script src="https://kit.fontawesome.com/295f98dd8b.js" crossorigin="anonymous"></script>
   <script src="js/script.js"></script>
