--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body class="content">
   <!-- Mouse path design by Louis Hoebregts from https://css-tricks.com/simulating-mouse-movement/ -->
-  <svg id="mouse" class="hide" fill="white" stroke="black"><path d="M20,21l4.5,8l-3.4,2l-4.6-8.1L12,29V9l16,12H20z"></path></svg>
+  <svg id="mouse" class="block hide" fill="white" stroke="black"><path d="M20,21l4.5,8l-3.4,2l-4.6-8.1L12,29V9l16,12H20z"></path></svg>
     <div class="title pad-bottom">
       <label>Let Me </label>
       <img src="resources/jira_logo.png"/>
@@ -28,13 +28,21 @@
       <input placeholder="Enter your search terms" type="text" id="searchQuery">
       <br />
       <br />
-      <button id="linkBtn" type="button" onclick="generateLink()">Get link</button>
-      <button id="searchBtn" type="button" onclick="redirectToJira()">Search</button>
+      <button id="linkBtn" class="hide" type="button" onclick="generateLink()">Get link</button>
+      <button id="searchBtn" class="hide" type="button" onclick="redirectToJira()">Search</button>
     </div>
-    <label id="sarcasticLabel" class="hide">Now, was that so hard?</label>
+    <label id="sarcasticLabel" class="block hide">Now, was that so hard?</label>
     <div id="linkDiv" class="link hide">
       <span>Here's your LMJTFY link:</span>
-      <input type="text" readonly="readonly" id="linkBox">
+      <div class="container">  
+        <input type="text" readonly="readonly" id="linkBox">
+        <button id="copyBtn" onclick="copyToClipboard()" title="Copy to Clipboard">
+          <i id="copyIcon" class="far fa-copy"></i>
+          <i id="loadingIcon" class="fas fa-spinner fa-spin hide"></i>
+          <i id="checkIcon" class="fas fa-check hide"></i>
+        </button>
+        <p></p>
+      </div>
     </div>
   </body>
 </html>
