Remove URL restriction for support with more Jira domains
Allow user to enter whole URL so they are not restrictred to jira.domain.com URLs.
Fix whitespace issues

--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
-  <title>Let Me Jira That For You</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="css/styles.css">
-  <script src="https://kit.fontawesome.com/295f98dd8b.js" crossorigin="anonymous"></script>
-  <script src="js/script.js"></script>
+    <title>Let Me Jira That For You</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="css/styles.css">
+    <script src="https://kit.fontawesome.com/295f98dd8b.js" crossorigin="anonymous"></script>
+    <script src="js/script.js"></script>
   </head>
   <body class="content">
   <!-- Mouse path design by Louis Hoebregts from https://css-tricks.com/simulating-mouse-movement/ -->
@@ -16,12 +16,10 @@
       <label>Jira That For You</label>
     </div>
     <div id="domainSection" class="domain pad-bottom hide">
-      <label>What is your Jira domain?</label>
-      <div class="url">
-	    <span>jira.</span>
-        <input placeholder="domain" type="text" id="domainName">
-        <span>.com</span>
-	  </div>
+      <label>What is your Jira URL?</label>
+      <br />
+      <br />
+      <input class="url" placeholder="https://mycompany.atlassian.net" type="text" id="domainName">
     </div>
     <div class="search-view pad-bottom">
       <i class="fas fa-search"></i>
